--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -24,6 +24,8 @@ $--color-info: $info-color;
 // change font path, required
 $--font-path: '~element-ui/lib/theme-chalk/fonts';
 
+@import '~element-ui/packages/theme-chalk/src/index';
+
 // overrides
 .el-pagination {
   color: #868e96;
